--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 server:
   port: 8080
-spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/SpringBoot_demo?useSSL=false
-    username: root
-    password: root
+mybatis:
+  type-aliases-package: com.example.demo.Entity
+  mapper-locations: classpath:mybatis.mapper/*Mapper.xml
+
+
